--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,75 @@
+2017-03-12 James Phillips <james@jamesphillipsuk.com>
+	*main.c: Altered typo in initial comment block and drawintroproc (The Project started in April, not March).
+	Added errno.h for enhanced error handling, and updated file opening to match.
+	Added the same functionality for the back arrow as the up.
+	Re-altered the up-arrow press.
+	
+	*CHANGELOG: Documented recent changes.
+
+2016-10-03 James Phillips <james@jamesphillipsuk.com>
+	*main.c: Renamed program - from MyProg to Aviate.
+	Changed program name in copyproc, drawintroproc, and drawmainproc.
+	Changed version number to Public Alpha 2.2.
+	Completely rewrote up arrow case again, it's all about figuring out more efficient ways to do things.
+	
+	*makefile: Added Aviate as a target.
+	
+	*CHANGELOG: Documented recent changes.
+	
+2016-10-02 James Phillips <james@jamesphillipsuk.com>
+	*main.c: fixed Buffer writing rubbish to file after up arrow is pressed.
+	Added even more comments.
+	
+	*CHANGELOG: Documented recent changes.
+
+2016-10-01 James Phillips <james@jamesphillipsuk.com>
+	*main.c: fixed issue with void main (void) procedure, is now int main (void), with a return of 0.
+	In testupproc, loop iterating through the buffer is running for Cnt < 2049, rather than sizeof() the pointer.
+	Added CLEARLN() Macro
+	Rewrote the up arrow press response, still not functioning correctly.
+	
+	*CHANGELOG: Documented recent changes.
+
+2016-09-29 James Phillips <james@jamesphillipsuk.com>
+	*main.c: Rewrote testupproc to be compatible with fgets and the buffer.
+	Implemented changes on up arrow function, it now goes up a line, but drops back down one, will have to fix that bug.
+	
+	*CHANGELOG: Documented recent changes.
+
+2016-09-26 James Phillips <james@jamesphillipsuk.com>
+	*main.c: Temporarily removed the implementation of testupproc from textproc.
+	Commented on testupproc to plan changes to it's implementation, to function with fgets.
+
+	*CHANGELOG: Documented recent changes.
+
+2016-09-23 James Phillips <james@jamesphillipsuk.com>
+	*main.c: Moved the implementation of testupproc
+
+	*CHANGELOG: Documented recent changes.
+	
+2016-09-21 James Phillips <james@jamesphillipsuk.com>
+	*main.c: Rewrote testupproc procedure to test for arrow key integration for line-by-line editing.  Experiment successful.
+	Moved implementation of testupproc into textproc to key check for input.
+	Removed limits.h, support for limits.h no longer needed.
+	Added a metric butt-load of comments.
+
+	*CHANGELOG: Documented recent changes.
+
+2016-09-20 James Phillips <james@jamesphillipsuk.com>
+	*main.c: Wrote testupproc procedure to test for arrow key integration for line-by-line editing.  Unsuccesful experiment.
+
+	*CHANGELOG: Documented recent changes.
+
+2016-06-13 James Phillips <james@jamesphillipsuk.com>
+	*main.c: Added full copyright notice to comment block at the start of the file.
+
+	*CHANGELOG: Documented recent changes.
+	Fixed spelling mistake from the 12th.
+	Added the GNU All-Permissive License notice.
+
 2016-06-12 James Phillips <james@jamesphillipsuk.com>
 	*main.c: Added more comments, streamlined code, and renamed some functions to make code editing simpler.
-	Updated version no to Public Alpha 2.1.
+	Updated version no. to Public Alpha 2.1.
 
 	*CHANGELOG: File added and documented recent changes.
 
@@ -9,3 +78,16 @@
 	Updated version no. to Public Alpha 2.
 
 	*gpl.txt: Deleted unnecessary file.
+
+/**
+* 
+* Copyright (C) James Phillips <james@jamesphillipsuk.com> 2016 under the GNU All-Permissive License.
+* 
+* GNU All-Permissive License:
+* 
+* Copying and distribution of this file, with or without modification,
+* are permitted in any medium without royalty provided the copyright
+* notice and this notice are preserved.  This file is offered as-is,
+* without any warranty.
+* 
+**/
