--- a/CHANGELOG
+++ b/CHANGELOG
@@ -5,16 +5,18 @@
 	Fixed off-by-one error where a corrupted character was saved to the end of the file.
 	Patched error where the first character of a file written in Aviate was deleted upon saving.
 	Added addToTextFileStruct() to add a character to a given textFile.  This saves some lines of code.
+	Did some code cleanup, added even more comments to document the code.  Removed unnecessary includes.
 
 	*CHANGELOG: Documented recent changes.
 	Fixed a typo with the date from yesterday.
+	Mass spelling and grammar corrections.
 
 2019-04-01 James Phillips <james@jamesphillipsuk.com>
 	*main.c: Modified initialiseTextFile() for memory efficiency.
 	Modified rewriteFile() so it doesn't close NCurses and hide our output until we give it a character.
 	Minor alterations to comments and code cleanliness.
 	Modified getFileContents() so it doesn't get null data before the start of the file, or crash at the end.
-	Implemented input checking to save inputted text to a file - because recognition of the control modifier from NCURSES caused some runtime errors, I'm using F1 and F2 for save and exit respectively.  I've updated this in the How To notice as well.
+	Implemented input checking to save inputted text to a file - because recognition of the control modifier from NCurses caused some runtime errors, I'm using F1 and F2 for save and exit respectively.  I've updated this in the How To notice as well.
 	Added Backspace functionality, using NCurses KEY_BACKSPACE and an alternative value which - together - should work for most keyboards.
 
 	*CHANGELOG: Documented recent changes.
@@ -110,7 +112,7 @@
 
 2016-09-26 James Phillips <james@jamesphillipsuk.com>
 	*main.c: Temporarily removed the implementation of testupproc from textproc.
-	Commented on testupproc to plan changes to it's implementation, to function with fgets.
+	Commented on testupproc to plan changes to its implementation, to function with fgets.
 
 	*CHANGELOG: Documented recent changes.
 
@@ -128,7 +130,7 @@
 	*CHANGELOG: Documented recent changes.
 
 2016-09-20 James Phillips <james@jamesphillipsuk.com>
-	*main.c: Wrote testupproc procedure to test for arrow key integration for line-by-line editing.  Unsuccesful experiment.
+	*main.c: Wrote testupproc procedure to test for arrow key integration for line-by-line editing.  Unsuccessful experiment.
 
 	*CHANGELOG: Documented recent changes.
 
